Implémentation de l’endpoint get detail pour la version v1.3.0
